--- a/Indrashis_Chatterjee.ipynb
+++ b/Indrashis_Chatterjee.ipynb
@@ -30,7 +30,11 @@
     "\n",
     "Analysig the file we need to identify patterns which indicate if a person is likely to default, which may be used for taking actions such as denying the loan, reducing the amount of loan, lending (to risky applicants) at a higher interest rate, etc.\n",
     "\n",
-    "We have used EDA to understand how consumer attributes and loan attributes influence the tendency of default."
+    "We have used EDA to understand how consumer attributes and loan attributes influence the tendency of default.\n",
+    "\n",
+    "#### Prepared  By-\n",
+    "- Ranjan Choudhury\n",
+    "- Indrashis Chatterjee"
    ]
   },
   {
@@ -42,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +968,7 @@
        "4                NaN             NaN                         NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1359,13 +1363,7 @@
       "25%                  NaN             NaN                         NaN  \n",
       "50%                  NaN             NaN                         NaN  \n",
       "75%                  NaN             NaN                         NaN  \n",
-      "max                  NaN             NaN                         NaN  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "max                  NaN             NaN                         NaN  \n",
       "Number of duplicate rows:  0\n"
      ]
     }
@@ -5614,7 +5612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
